css.css
article, aside, figure, footer, header, hgroup, menu, nav, section { display: block; }        
body { font-family: Arial; font-size: 11px; }
ul { list-style: none; }

#svgbasics { 
  position: absolute; left: 0px; top: 0px; 
  border: solid 0px #484; z-index: -100; 
}

.draggable { }
.droppable { }  


#pnlAllIn, #dialog, #dialogMappingResult,
#popButton, #getMappings { 
  z-index: 10;
}

#panels{
margin: 20px;
display: flex;
justify-content: space-around;
}

#leftPanel, #rightPanel {
  width: 400px;
  float: left;
  background: gold;
  padding: 10px;
  opacity: 0.5;
  max-height: 150px;
}


#rightPanel {
margin-top: 250px;
}

strong {
display: block;
padding: 10px;
background: white;
width: 100px;
}

#getMappings {
display: block;
background: white;
margin-left: 40px;
width: 100px;
height: 100px;
padding: 10px;
}

